venue-admin-acme/dev/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venue-admin-acme-dev
spec:
  replicas: 0
  revisionHistoryLimit: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: venue-admin-acme-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        # app: venue-admin-acme-dev
        # version: v1.0
        app.kubernetes.io/name: venue-admin-acme-dev
    spec:
      containers:
        - name: app
          image: 111111111111.dkr.ecr.ap-northeast-2.amazonaws.com/venue-admin-acme-dev
          resources: {}
          ports:
            - containerPort: 8092
          readinessProbe:
            httpGet:
              path: /acme/
              port: 8092
            initialDelaySeconds: 30
            periodSeconds: 5
