venue-admin-acme/dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: venue-admin-acme-dev
  labels:
    app.kubernetes.io/name: venue-admin-acme-dev
spec:
  ports:
    - port: 8092
      name: http
      targetPort: 8092
      nodePort: 30143
  selector:
    app.kubernetes.io/name: venue-admin-acme-dev
  type: NodePort
